address readability issues

--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -14,13 +14,13 @@ footer
         margin: 0
         text-transform: uppercase
         font-size: 12px
-        color: rgba(0,0,0,0.4)
+        color: rgba(0,0,0,0.6)
 
       a
         @extend %small-bold
-        color: rgba(0,0,0,0.5)
+        color: rgba(0,0,0,0.6)
         display: inline-block
         margin-right: 30px
 
         &:hover
-          color: rgba(0,0,0,0.7)
+          color: rgba(0,0,0,0.8)
